--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,6 @@ html {
 
     .page2 .content
     {
-        margin-left: 0;
         width: 50%;
         height: auto;
         padding: 20px;
@@ -59,12 +58,16 @@ html {
 
 
     .contentcontainer #content2{
-        margin-left: 80px;
+        margin-left: 100px;
         margin-top: 0;
+        text-align: center;
+
     }
 
     .contentcontainer #content1{
-        margin-left: 220px;
+        margin-left: 330px;
+        text-align: center;
+        
 
     }
 
