--- a/src/App.css
+++ b/src/App.css
@@ -58,15 +58,22 @@ html {
 
 
     .contentcontainer #content2{
-        margin-left: 100px;
+        margin-left: 130px;
+        font-size: 12px;
+        display: none;
         margin-top: 0;
+        margin-top: 100px;
         text-align: center;
-
     }
 
+    .content #name{
+       font-size: 15px;
+    }
     .contentcontainer #content1{
-        margin-left: 330px;
+        margin-left: 320px;
+        font-size: 15px;
         text-align: center;
+        margin-top: 100px
         
 
     }
