--- a/src/component/css/Page2.css
+++ b/src/component/css/Page2.css
@@ -27,7 +27,7 @@
     gap: 5rem;
 }
 
-.content{
+.content_skills{
     border-radius: 2.0rem;
     padding: 2.0rem;
     margin-top: 7.0rem;
@@ -35,9 +35,19 @@
     height: 30rem;
     height: 30.0rem;
     width: 50.0rem;
-    /* background-color: rgb(239, 239, 239); */
     color: rgb(255, 255, 255);
 }
+.content_bio{
+    border-radius: 2.0rem;
+    padding: 2.0rem;
+    margin-top: 7.0rem;
+    font-size: 2rem;
+    height: 30rem;
+    height: 30.0rem;
+    width: 50.0rem;
+    color: rgb(255, 255, 255);
+}
+
 #content1{
     scale: 1.2;
     position: relative;
