--- a/src/App.css
+++ b/src/App.css
@@ -1,101 +1,80 @@
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
-
 
 @media screen and (max-width: 600px) {
-    html 
-    {
-        font-size: 30%;
-    }
+  html {
+    font-size: 30%;
+  }
 
-    .page2 .title
-    {
-     margin-left: 0;
-     width: 100%;
-    }
+  .page2 .title {
+    margin-left: 0;
+    width: 100%;
+  }
 
-    .page2 .content
-    {
-        width: 50%;
-        height: auto;
-        padding: 20px;
-    }
+  .page2 .content {
+    width: 50%;
+    height: auto;
+    padding: 20px;
+  }
 
-    .page2 .skills
-    {
-        scale: 0.5;
-        margin-top: 0;
-    }
-    
-    .page3 .page3title
-    {
-     margin-right: 0;
-     width: 100%;
-    }
+  .page2 .skills {
+    scale: 0.5;
+    margin-top: 0;
+  }
 
-    .page3 .page3content
-    {
-     flex-direction: column;
-    }
+  .page3 .page3title {
+    margin-right: 0;
+    width: 100%;
+  }
 
-    .page3 .project{
-        height: 12rem;
-    }
-    .page4 .page4{
-        padding-bottom:0 ;
-    }
+  .page3 .page3content {
+    flex-direction: column;
+  }
 
-    .page4 .contact{
+  .page3 .project {
+    height: 12rem;
+  }
+  .page4 .page4 {
+    padding-bottom: 0;
+  }
+
+  .page4 .contact {
     margin-left: -25rem;
-    margin-top:  5rem;
-    }
+    margin-top: 5rem;
+  }
 
-    .contentcontainer{
-        flex-direction: column;
-        margin-top: 0;
-    }
+  .contentcontainer {
+    flex-direction: column;
+    margin-top: 0;
+  }
 
+  .contentcontainer #content2 {
+    margin-left: 130px;
+    font-size: 12px;
+    display: none;
+    margin-top: 0;
+    margin-top: 100px;
+    text-align: center;
+  }
 
-    .contentcontainer #content2{
-        margin-left: 130px;
-        font-size: 12px;
-        display: none;
-        margin-top: 0;
-        margin-top: 100px;
-        text-align: center;
-    }
+  .content #name {
+    font-size: 15px;
+  }
+  .contentcontainer #content1 {
+    margin-left: 320px;
+    font-size: 15px;
+    text-align: center;
+    margin-top: 100px;
+  }
 
-    .content #name{
-       font-size: 15px;
-    }
-    .contentcontainer #content1{
-        margin-left: 320px;
-        font-size: 15px;
-        text-align: center;
-        margin-top: 100px
-        
-
-    }
-
-    
-.page4 .button{
+  .page4 .button {
     scale: 0.8;
     margin-top: -20px;
-    
-}
+  }
 
-
-.page4 input[type=text]{
+  .page4 input[type="text"] {
     scale: 0.7;
     margin-left: 20px;
-    
-}
-
-
-
-
-
-
-
+  }
 }
