--- a/src/component/css/Page1.css
+++ b/src/component/css/Page1.css
@@ -1,17 +1,20 @@
-.page1{
+.page1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   color: white;
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    font-size: 7.0rem;
-    background-color: black;
-    padding-bottom: 10rem;
-  }
+  text-align: center;
+  height: 75rem;
+  width: 100%;
+  font-size: 7rem;
+  background-color: black;
+}
 
-  h1{
-    margin-top: 20rem;
-  }
+.page1content {
+  width: 50%;
+}
 
- 
- 
+#title{
+  background-color: red;
+}
